cluster/apps/home/excalidraw/app/excalidraw-room-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: excalidraw-room
  namespace: istio-ingress
spec:
  hosts:
    - 'draw-collab.${DOMAIN_1}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 3002
            host: excalidraw-room.home.svc.cluster.local
          weight: 100
