cluster/apps/home/excalidraw/app/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: excalidraw-room
  namespace: istio-ingress
spec:
  hosts:
    - 'excalidraw-room.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: excalidraw-room.home.svc.cluster.local
          weight: 100
